update layout, server, and make index.js for controolers and routes

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,17 @@
   <a href="/" class="noStyle"></a>
     <h1>BookShop App</h1>
   </a>
-  
+  <h3>header</h3>
+
+  <hr>
+
+  <%- body %>
+
+  <br /><br />
+  <hr />
+  <br />
+  <div class="footer">
+    Book Shop App &copy;  2024
+  </div>
 </body>
 </html>
