--- a/views/book/index.ejs
+++ b/views/book/index.ejs
@@ -1,13 +1,23 @@
 <!-- display books-->
 <div class="container text-center">
-  <div class="row"></div>
+  <div class="row">
     <% books.forEach(book => {%>
-      <div class="card col-4">
-        <h5><%= book.title %></h5>
-        <h5><%= book.price %>$</h5>
-        <h5>Book Category: <%= book.category %></h5>
-        <h5>Book Condition <%= book.condition %></h5>
-      </div> 
+
+      <div class="card col-md-4 mb-4"> 
+        <img 
+          src="/images/<%= book.image %>"
+          class="card-img-top" 
+          alt="Book image" 
+          style="height: 200px; object-fit: cover;" 
+        />
+
+        <div class="card-body">
+          <h5><%= book.title %></h5>
+          <h5><%= book.price %>$</h5>
+          <h5>Book Category: <%= book.category %></h5>
+          <h5>Book Condition <%= book.condition %></h5>
+        </div> 
+      </div>
     <%})%>
   </div>
 </div>   
