--- a/views/book/index.ejs
+++ b/views/book/index.ejs
@@ -15,7 +15,9 @@
           <h5><%= book.title %></h5>
           <h5><%= book.price %>$</h5>
           <h5>Book Category: <%= book.category %></h5>
-          <h5>Book Condition <%= book.condition %></h5>
+          <h5>Book Condition: <%= book.condition %></h5>
+          <h5>Book Seller: <%= book.seller.name %></h5>
+          
         </div> 
       </div>
     <%})%>
