--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,18 @@
-
 body {
   font-family: 'Helvetica Neue', Arial, sans-serif;
-  background-color: #F3EEEA;
-  margin: 0;
+  background-color: #f3eeea;
+  margin: 20px;
   padding: 0;
   color: #333;
   line-height: 1.6;
   transition: all 0.3s ease;
 }
 
-
 h1 {
   font-size: 3rem;
   text-align: center;
   margin-top: 20px;
-  color: #2C2C2C;
+  color: #2c2c2c;
   font-weight: bold;
   letter-spacing: 1.5px;
   text-transform: uppercase;
@@ -29,10 +27,17 @@ h3 {
   letter-spacing: 1px;
 }
 
+h4 {
+  text-align: center;
+  font-size: 1.4rem;
+  color: #555;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
 
 nav {
   text-align: center;
-  background-color: #B0A695;
+  background-color: #b0a695;
   padding: 15px 0;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   position: sticky;
@@ -54,10 +59,9 @@ nav a {
 
 nav a:hover {
   background-color: #333;
-  color: #F3EEEA;
+  color: #f3eeea;
   border: 2px solid #333;
 }
-
 
 .btn {
   font-size: 1rem;
@@ -71,33 +75,32 @@ nav a:hover {
 
 .btn:hover {
   background-color: #333;
-  color: #F3EEEA;
+  color: #f3eeea;
 }
-
 
 .container {
   max-width: 1200px;
   margin: 40px auto;
   padding: 20px;
-  background-color: #FFF;
+  background-color: #fff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
 }
 
 hr {
   border: none;
-  border-top: 2px solid #B0A695;
+  border-top: 2px solid #b0a695;
   margin: 40px 0;
 }
 
 .footer {
   text-align: center;
-  background-color: #B0A695;
+  background-color: #b0a695;
   padding: 30px 0;
   font-size: 1rem;
   font-weight: 500;
   letter-spacing: 1px;
-  border-top: 2px solid #DDD;
+  border-top: 2px solid #ddd;
   box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.05);
 }
 
@@ -106,3 +109,8 @@ hr {
   color: #333;
 }
 
+.detailsDiv {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
