--- a/views/book/index.ejs
+++ b/views/book/index.ejs
@@ -12,7 +12,7 @@
         />
 
         <div class="card-body">
-          <h5><%= book.title %></h5>
+          <h5><a href="/book/detail?id=<%= book._id%>"><%= book.title %></a></h5>
           <h5><%= book.price %>$</h5>
           <h5>Book Category: <%= book.category %></h5>
           <h5>Book Condition: <%= book.condition %></h5>
