update profile page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,7 @@
     <a href="/book/index" class="btn btn-outline-primary">view Books</a>
   <% if(user) { %>
     <a href="/book/add" class="btn btn-outline-primary">add Books</a>
+    <a href="/profile/index" class="btn btn-outline-primary">view profile</a>
     <a href="/logout" class="btn btn-outline-primary">Logout</a>
     Hi <%= user.name %>
 
