just small update

--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -12,6 +12,11 @@
   </tr>
   <tr>
     <div><th><h3>Email:</h3></th> <th><h4><%= user.email %></h4></th></div>
+
+  </tr>
+  <tr>
+    <div><th><h3>number:</h3></th> </div>
+    
   </tr>
 </table>
 <!-- <div>
