fixed an issue with adding/editing book without adding a photo

--- a/views/book/add.ejs
+++ b/views/book/add.ejs
@@ -28,7 +28,7 @@
   
   <div>
     <label>Images</label>
-    <input name="image" type="file" multiple/>
+    <input name="image" type="file" required/>
   </div>
 
   <!-- <input type="hidden" name="seller" value="<%=  // user.name %>" /> -->
