--- a/views/book/edit.ejs
+++ b/views/book/edit.ejs
@@ -36,6 +36,7 @@
       style="height: 200px; object-fit: cover;" 
       />
       <input name="image" type="file" multiple/>
+      <input type="hidden" name="currentImg" value="<%= book.image %>" />
     </div>
   </div>
  
