--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -1,7 +1,8 @@
+
 <table>
   <tr>
     <th><img 
-      src="<%= user.avatar %>"
+      src="<%= user.image %>"
       class="card-img-top" 
       alt="profile image" 
       style="height: 10px 10px;" 
@@ -15,10 +16,14 @@
 
   </tr>
   <tr>
-    <div><th><h3>number:</h3></th> </div>
+    <div><th><h3>number:</h3></th> <th><h4><%= user.number %></h4></th> </div>
     
   </tr>
+  <tr>      <a href="/profile/edit">
+    Edit  
+    </a></tr>
 </table>
+
 <!-- <div>
 <div>
   <img 
