finish the edit profile

--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -1,12 +1,22 @@
-
 <table>
   <tr>
-    <th><img 
+    <th>
+      <% if (user.image== null) {%>
+      <img 
+      src="<%= user.avatar %>"
+      class="card-img-top" 
+      alt="profile image" 
+      style="height: 10px 10px;" 
+    />
+  <%} else{ %>
+      <img 
       src="<%= user.image %>"
       class="card-img-top" 
       alt="profile image" 
       style="height: 10px 10px;" 
-    /></th>
+    />
+    <%}%>
+  </th>
   </tr>
   <tr>
     <div><th><h3>Name:</h3></th> <th><h4><%= user.name %></h4></th></div>
@@ -19,9 +29,13 @@
     <div><th><h3>number:</h3></th> <th><h4><%= user.number %></h4></th> </div>
     
   </tr>
-  <tr>      <a href="/profile/edit">
+  <tr>      
+  <th>
+    <a href="/profile/edit" class="btn btn-outline-primary">
     Edit  
-    </a></tr>
+    </a>
+  </th>
+  </tr>
 </table>
 
 <!-- <div>
