--- a/views/profile/edit.ejs
+++ b/views/profile/edit.ejs
@@ -1,6 +1,6 @@
 <h1>Edit Profile </h1>
 
-<form method="POST" action="/profile/update">
+<form method="POST" action="/profile/update" enctype="multipart/form-data">
   <div>
     <label>name</label>
     <input name="name" type="text" value="<%= user.name %>" />
