--- a/views/profile/edit.ejs
+++ b/views/profile/edit.ejs
@@ -18,6 +18,7 @@
 
   <div>
     <label>Image</label>
+    <input type="hidden" name="currentImg" value="<%= user.image %>" />
     <input name="image" type="file" value="<%= user.image %>" />
   </div>
 
