--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Helvetica Neue', Arial, sans-serif;
   background-color: #f3eeea;
@@ -9,7 +8,9 @@ body {
   transition: all 0.3s ease;
 }
 
-h1, h3, h4 {
+h1,
+h3,
+h4 {
   text-align: center;
   color: #2c2c2c;
 }
@@ -102,7 +103,6 @@ hr {
   margin: 40px 0;
 }
 
-
 .footer {
   text-align: center;
   background-color: #b0a695;
@@ -127,7 +127,8 @@ main {
 
 /* Hero Section */
 .hero {
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/path/to/hero-image.jpg') center/cover no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('/path/to/hero-image.jpg') center/cover no-repeat;
   color: white;
   padding: 100px 20px;
   text-align: center;
@@ -208,3 +209,7 @@ main {
   color: #fff;
 }
 
+img {
+  height: 100px;
+  width: 100px;
+}
