--- a/views/cart/index.ejs
+++ b/views/cart/index.ejs
@@ -40,5 +40,6 @@
     </form>
   </div>
   <% } %>
-  <h5><a href="/order/index">View Orders</a></h5>
+  <h5 style="margin-top:15px ;"><a href="/order/index">View Orders</a></h5>
+  <h5 style="margin-top:15px ;"><a href="/book/index">Continue Shopping</a></h5>
 </div>   
