--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -16,9 +16,11 @@
   </tr>
   <tr>
     <div><th><h3>number:</h3></th> </div>
-    
   </tr>
 </table>
+<tr>
+  <a href="/profile/detail">View My Books</a>
+</tr>
 <!-- <div>
 <div>
   <img 
