--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <h1>BookShop App</h1>
+  <img src="/logos/2.png" alt="Book Shop Logo" class="logo">
   </a>
   <!-- <h3>header</h3> -->
   <nav>
