start working on order details

--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -36,7 +36,17 @@
     </a>
   </th>
   </tr>
+
+  <tr>      
+    <th>
+      <a href="/order/index" class="btn btn-outline-primary"> Order History
+      </a>
+    </th>
+    </tr>
 </table>
+
+
+
 
 <!-- <div>
 <div>
