--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -5,7 +5,7 @@
     <% orders.forEach(order => {%>
 
       <div class="card col-md-4 mb-4" style="padding: 20px; box-sizing: border-box;"> 
-          <h5 class="card-title" style="margin-top:10px ;"><!--<a href="/order/detail?id=<%=// order._id%>">--> View Order Details</a></h5>
+          <h5 class="card-title" style="margin-top:10px ;"><a href="/order/detail?id=<%=order._id%>"> View Order Details</a></h5>
           <h5 style="margin-top:10px">Total Payment: <%= order.totalPayment%> $</h5>
           <h5 style="margin-top:10px">Order Status: <%= order.status %></h5>
           <h5 style="margin-top:10px">Issue Date: <%= dayjs(order.createdAt).format('YYYY-MM-DD') %></h5>      
