--- a/views/cart/index.ejs
+++ b/views/cart/index.ejs
@@ -19,6 +19,7 @@
 
         <div class="card-body" style="text-align: left;">
           <h5><a href="/book/detail?id=<%= book._id%>"><%= book.title %></a></h5>
+          <h5><%= book.quantity %>$</h5>
           <h5><%= book.price %>$</h5>
         </div>
         
