--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -34,7 +34,7 @@
     </tr>
 </table>
 <tr>
-  <a href="/profile/detail">View My Books</a>
+  <a href="/profile/detail"class="btn btn-outline-primary">View My Books</a>
 </tr>
 
 <!-- <div>
