--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -46,7 +46,7 @@
     <p> Kingdom of Bahrain,Manama </p>
     <p>BIBF GA</p>
     <p>Contact us:
-      <a href="https://github.com/DanaK270">Dana Khalid </a> |
+      <a href="https://github.com/DanaK270">Dana Khaled </a> |
       <a href="https://github.com/MohamedYaqoob">Mohammad yaqoob</a> |
       <a href="https://github.com/Aliiyousiff">Ali Yousif</a>
     </p>
