--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -31,10 +31,10 @@
       <a href="/order/index" class="btn btn-outline-primary"> Order History
       </a>
     </th>
-    </tr>
+  </tr>
 </table>
 <tr>
-  <a href="/profile/detail">View My Books</a>
+  <a href="/profile/detail"class="btn btn-outline-primary">View My Books</a>
 </tr>
 
 <!-- <div>
