--- a/views/book/edit.ejs
+++ b/views/book/edit.ejs
@@ -44,5 +44,7 @@
 
   
   <button type="submit" class="btn btn-primary"> Update Book </button>
+  <a href="/profile/detail" class="btn btn-outline-primary"> Go Back </a>
+
   
 </form>
