--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-    <nav class="navbar navbar-expand-lg" style="display: flex; justify-content: left;">
+    <nav class="navbar navbar-expand-lg" style="display: flex; justify-content: left; border: 3px;">
       <div class="logo-container">
         <a href="/">
           <img src="/images/book sope logo.png" alt="Book Shop Logo" class="booklogo">
