corect the user number

--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -26,7 +26,7 @@
 
   </tr>
   <tr>
-    <div><th><h3>number:</h3></th> </div>
+    <div><th><h3>number:</h3></th> <th><h4><%= user.number %></h4></th> </div>
   </tr>
 
   <tr>      
