--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,6 +252,13 @@ header {
   margin: 20px;
 }
 
+.detailsDiv div {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
 .cartIndex {
   display: flex;
   justify-content: space-between;
@@ -262,8 +269,15 @@ header {
   .detailsDiv {
     display: flex;
     flex-direction: column-reverse;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 20px;
+  }
+
+  .detailsDiv div {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .navbar {
